# artfight-api

./: .flake8  README.md  pyproject.toml
.github/workflows/: build.yml
src/artfight/: __init__.py  client.py  error.py  http.py  parser.py  util.py
src/artfight/object/: __init__.py  abc.py  attack.py  character.py  user.py
