[tool.poetry]
name = "artfight-api"
version = "0.1.2"
description = "A module for retrieving data from artfight.net"
authors = ["NimajnebEC <nimajnebec@users.noreply.github.com>"]
repository = "https://github.com/NimajnebEC/artfight-api"
packages = [{ include = "artfight", from = "src" }]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
aiohttp = { extras = ["speedups"], version = "^3.8.4" }
beautifulsoup4 = "^4.12.2"
python = "^3.8.1"


[tool.poetry.group.dev.dependencies]
flake8-length = "^0.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
